--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -62,42 +62,43 @@ body {
 }
 
 .winner-modal {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.8);
-  z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 1000; /* modal z-index'i yuksek olmali. */
 }
 
 .winner-modal .modal-content {
-  background: #000;
-  padding: 20px;
-  border-radius: 8px;
-  text-align: center;
-  width: 90%;
-  height: 90%;
-  color: #fff;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
+    background: #000;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    width: 90%;
+    height: 90%;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    position: relative; 
 }
 
 .winner-modal button {
-  margin-top: 10px;
-  padding: 10px 20px;
-  background-color: #3498db;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  width: 200px;
+    margin-top: 10px;
+    padding: 10px 20px;
+    background-color: #3498db;
+     color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 200px;
 }
 
 .winner-modal button:hover {
